<resources>
    <string name="APPID_BUGLY">bugly1105779914</string>
    <string name="APPKEY_DENGTA">1105779914</string>
    <string name="DEVKEY_APPSFLYER">RQz33k7wn3WSF7iAa5FzRh</string>
    <string name="GARENA_CATEGORY">262161</string>
    <string name="GARENA_REGION">vn</string>
    <string name="GCloud.GCloud.GameId">1945015797</string>
    <string name="GCloud.TDM.RouterAddressFormal">sg.tdm.qq.com</string>
    <string name="GCloud.TDM.RouterTcpFormal">3013</string>
    <string name="GCloud.TDM.RouterUdpFormal">3012</string>
    <string name="InstallChannel">Facebook</string>
    <string name="MIDAS.APP_SDK_ASSIGN_ID">100054</string>
    <string name="MIDAS.VIRTUAL_CURRENCY_NAME">Diamond</string>
    <string name="NTVS_CHAT_BIZ">vnwzryhw</string>
    <string name="NTVS_CHAT_CD">10</string>
    <string name="NTVS_CHAT_ENV">online</string>
    <string name="NTVS_CHAT_ID">9009</string>
    <string name="NTVS_CHAT_MAX_INPUT">40</string>
    <string name="NTVS_CHAT_MSGLIST_SIZE">20</string>
    <string name="NTVS_CHAT_PROTOCAL">chat</string>
    <string name="NTVS_CHAT_URL">ws://119.28.123.15</string>
    <string name="NTVS_FULLSCREEN_ISSUE_DEVICES">ASUS_Z00AD</string>
    <string name="NTVS_SERVER_CONFIG">tvnotice.kg.garena.vn:8000</string>
    <string name="NTVS_SHARPNESS">480P</string>
    <string name="TA_APPKEY">Aqc1105779914</string>
    <string name="XG_V2_ACCESS_ID">2100240485</string>
    <string name="XG_V2_ACCESS_KEY">A69MYJY21H2W</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Liên Quân Mobile</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="beetalk_sdk_label_garena_login">Garena Login</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close_camera_view">Tap twice to close the camera view</string>
    <string name="com.beetalklib.ganalytics.report_url">http://122.11.128.69:2205</string>
    <string name="com.facebook.sdk.ApplicationId">628749490632038</string>
    <string name="com.tencent.imsdk.GameId">1137</string>
    <string name="com.tencent.imsdk.SdkServer">ng-vn-sdkapi.gameitop.com</string>
    <string name="com.tencent.imsdk.debug.level">6</string>
    <string name="com.tencent.imsdk.garena.APP_SDK_KEY">027709b12673a3e18de16bf9b85723a2d55e9bffd3364aea67f176e533f69515</string>
    <string name="com.tencent.imsdk.garena.Environment">production</string>
    <string name="com.tencent.imsdk.notice.IntervalRequest">300000</string>
    <string name="com.tencent.imsdk.notice.SdkServer">https://ng-vn-notice.gameitop.com</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="imsdk_webview_back">go back</string>
    <string name="imsdk_webview_close">close</string>
    <string name="imsdk_webview_forward">forward</string>
    <string name="imsdk_webview_share">share</string>
    <string name="msdk_ad_pause_btn1_text">继续游戏</string>
    <string name="msdk_ad_pause_btn2_text">重新开始</string>
    <string name="msdk_ad_pause_btn3_text">终止闯关</string>
    <string name="msdk_ad_pause_header">暂停游戏</string>
    <string name="msdk_ad_stop_btn1_text">取消退出</string>
    <string name="msdk_ad_stop_btn2_text">终止游戏</string>
    <string name="msdk_ad_stop_content">退出游戏</string>
    <string name="retry">Retry</string>
    <string name="submit">Confirm</string>
    <string name="toolbar_tag_land_show">false</string>
    <string name="u_need_agree_me">"You will be prompted to grant several permissions. The game requires you to grant all these permissions in order to avoid flashbacks. 

Making and managing calls: Required to improve game performance. 

Storage: Required to install and load critical game resources."</string>
    <string name="unipay_cancel">Cancel</string>
    <string name="unipay_dlg_tip">Friendly Reminder</string>
    <string name="unipay_sure">Confirm</string>
    <string name="white_list_dlg_body">您还没有天天飞车限量内测的资格，快去应用宝抢号吧！</string>
    <string name="white_list_dlg_title">温馨提示</string>
    <string name="white_list_positive_download">下载应用宝</string>
</resources>