<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/msdk_ad_frame" android:background="@color/msdk_ad_bg_white" android:layout_width="@dimen/msdk_ad_dlg_image_width" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/msdk_ad_titleLine" android:layout_width="fill_parent" android:layout_height="@dimen/msdk_ad_three_default_title_height">
        <TextView android:textSize="@dimen/msdk_ad_three_default_title_size" android:textColor="@color/msdk_ad_content_text_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/msdk_ad_pause_header" />
    </LinearLayout>
    <View android:background="@color/msdk_ad_divide_line_color" android:layout_width="fill_parent" android:layout_height="@dimen/msdk_ad_divide_line_height" />
    <LinearLayout android:orientation="vertical" android:id="@id/middle_content" android:background="@color/msdk_ad_btn_layout_bg_color" android:paddingLeft="@dimen/msdk_ad_three_default_padding_left" android:paddingRight="@dimen/msdk_ad_three_default_padding_right" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/msdk_ad_dlg_btn_textsize" android:textColor="@color/msdk_ad_btn_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/msdk_ad_btn_1" android:tag="FIRST_BTN_POSITION" android:background="@drawable/msdk_ad_first_btn_back_bkg" android:layout_width="fill_parent" android:layout_height="@dimen/msdk_ad_three_default_btn_height" android:layout_marginTop="@dimen/msdk_ad_three_default_btn_bottom" android:text="@string/msdk_ad_pause_btn1_text" />
        <Button android:textSize="@dimen/msdk_ad_dlg_btn_textsize" android:textColor="@color/msdk_ad_btn_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/msdk_ad_btn_2" android:tag="SECOND_BTN_POSITION" android:background="@drawable/msdk_ad_second_btn_back_bkg" android:layout_width="fill_parent" android:layout_height="@dimen/msdk_ad_three_default_btn_height" android:layout_marginTop="@dimen/msdk_ad_three_default_btn_top" android:text="@string/msdk_ad_pause_btn2_text" />
        <Button android:textSize="@dimen/msdk_ad_dlg_btn_textsize" android:textColor="@color/msdk_ad_btn_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/msdk_ad_btn_3" android:tag="THIRD_BTN_POSITION" android:background="@drawable/msdk_ad_third_btn_back_bkg" android:layout_width="fill_parent" android:layout_height="@dimen/msdk_ad_three_default_btn_height" android:layout_marginTop="@dimen/msdk_ad_three_default_btn_top" android:layout_marginBottom="@dimen/msdk_ad_three_default_btn_bottom" android:text="@string/msdk_ad_pause_btn3_text" />
    </LinearLayout>
</LinearLayout>